WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
193259
Editable images sometimes don't become focused when tapped
https://bugs.webkit.org/show_bug.cgi?id=193259
Summary
Editable images sometimes don't become focused when tapped
Tim Horton
Reported
2019-01-08 15:03:50 PST
Editable images sometimes don't become focused when tapped
Attachments
Patch
(2.98 KB, patch)
2019-01-08 15:04 PST
,
Tim Horton
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Tim Horton
Comment 1
2019-01-08 15:04:22 PST
Created
attachment 358641
[details]
Patch
Tim Horton
Comment 2
2019-01-08 15:04:24 PST
<
rdar://problem/47038424
>
WebKit Commit Bot
Comment 3
2019-01-08 17:09:14 PST
Comment on
attachment 358641
[details]
Patch Clearing flags on attachment: 358641 Committed
r239756
: <
https://trac.webkit.org/changeset/239756
>
WebKit Commit Bot
Comment 4
2019-01-08 17:09:16 PST
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug