Editable images sometimes don't become focused when tapped https://bugs.webkit.org/show_bug.cgi?id=193259 <rdar://problem/47038424>

Reviewed by Wenson Hsieh.

Often when tapping an editable image inside an editable text area, the
text area's selection will change instead of focusing the editable image.

No new tests; I have had no luck writing a test that reliably failed
beforehand (the "sometimes" is a problem).

* html/HTMLImageElement.cpp:
(WebCore::HTMLImageElement::defaultEventHandler):
* html/HTMLImageElement.h:
Override mousedown on editable images, focus the image, and prevent
the default behavior.


Canonical link: https://commits.webkit.org/207767@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@239756 268f45cc-cd09-0410-ab3c-d52691b4dbfc